# humanoid_robots_ros2

./: README.md
01rfc_berlin_robot/rfc_description/: package.xml
01rfc_berlin_robot/rfc_description/launch/: rviz.launch  standalone.launch
01rfc_berlin_robot/rfc_description/protos/: RFCRobot2016Core.proto
01rfc_berlin_robot/rfc_description/urdf/: robot.urdf
01rfc_berlin_robot/rfc_description/worlds/: rfc.wbt  walk_optim_rfc.wbt
01rfc_berlin_robot/rfc_moveit_config/: package.xml
01rfc_berlin_robot/rfc_moveit_config/config/: kinematics.yaml  ompl_planning.yaml  rfc.srdf  stomp_planning.yaml
01rfc_berlin_robot/rfc_moveit_config/launch/: demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  planning_context.launch  stomp_planning_pipeline.launch.xml
ITAndroids_chape_robot/chape_description/: CMakeLists.txt  package.xml
ITAndroids_chape_robot/chape_description/launch/: rviz.launch  standalone.launch
ITAndroids_chape_robot/chape_moveit_config/: CMakeLists.txt  package.xml
UTRA_bez_robot/bez_description/: CMakeLists.txt  package.xml
UTRA_bez_robot/bez_moveit_config/: CMakeLists.txt  package.xml
nao_robot/: README.md
nao_robot/nao_description/: CMakeLists.txt  package.xml
nao_robot/nao_description/config/: nao.rviz
nao_robot/nao_description/launch/: quintic_walk_viz.launch  rviz.launch  standalone.launch
nao_robot/nao_description/urdf/: robot.urdf
nao_robot/nao_description/urdf/naoV50_generated_urdf/: nao.urdf
nao_robot/nao_description/worlds/: robocup_nao.wbt
nao_robot/nao_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rfc/rfc_description/: CMakeLists.txt  package.xml
rfc/rfc_moveit_config/: CMakeLists.txt  package.xml
robotis_op2_robot/: README.md
robotis_op2_robot/robotis_op2_description/: CMakeLists.txt  package.xml
robotis_op2_robot/robotis_op2_description/data/: ID_JointName
robotis_op2_robot/robotis_op2_description/launch/: robotis_op2_rviz.launch
robotis_op2_robot/robotis_op2_description/rviz/: op.rviz  robotis_op2.rviz  robotis_op2_ball.rviz
robotis_op2_robot/robotis_op2_description/urdf/: robot.urdf  robotis_op2.gazebo.xacro  robotis_op2.inertia.xacro  robotis_op2.structure.arm.xacro  robotis_op2.structure.head.xacro  robotis_op2.structure.leg.xacro  robotis_op2.visuals.xacro  robotis_op2.visuals_simple.xacro
robotis_op2_robot/robotis_op2_moveit_config/: CMakeLists.txt  package.xml
robotis_op3_robot/: README.md
robotis_op3_robot/op3_description/: CMakeLists.txt  package.xml
robotis_op3_robot/op3_moveit_config/: CMakeLists.txt  package.xml
wolfgang_robot/: README.md
(+309 files in other folders)
