<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>robotis_op2_description</name>
  <version>1.0.0</version>
  <description>URDF description of the robotis_op2 robot.</description>

  <maintainer email="marc.bestmann@uni-hamburg.de">Marc Bestmann</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>

  <author email="marc.bestmann@uni-hamburg.de">Marc Bestmann</author>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>

  <license>Apache</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
